<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EgyptActivity">

    <ImageView
        android:id="@+id/topImageView"
        android:layout_width="274dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/selectyear" />

    <Button
        android:id="@+id/sixteenFortyBTN"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:alpha="0"
        android:background="#3FBDF1"
        android:onClick="yearOnClick"
        android:tag="1640"
        android:text="@string/_1640_bce_1570_bce"
        android:textAllCaps="true"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topImageView"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/fifteenSeventyMilitaryBTN"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:alpha="0"
        android:background="#3FBDF1"
        android:onClick="yearOnClick"
        android:tag="15701"
        android:text="@string/_1570_bce_1075_bce_military"
        android:textAllCaps="true"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixteenFortyBTN"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/fifteenSeventyPoliticalBTN"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:alpha="0"
        android:background="#3FBDF1"
        android:onClick="yearOnClick"
        android:tag="15702"
        android:text="@string/_1570_bce_1075_bce_political"
        android:textAllCaps="true"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenSeventyMilitaryBTN"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/twelveEightyfiveBTN"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:alpha="0"
        android:background="#3FBDF1"
        android:onClick="yearOnClick"
        android:tag="1285"
        android:text="@string/_1285_bce_military_art_literature"
        android:textAllCaps="true"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenSeventyPoliticalBTN"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/eventShowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topImageView"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/addToTimelineBTN"
        android:layout_width="229dp"
        android:layout_height="53dp"
        android:alpha="0"
        android:background="#4CAF50"
        android:onClick="addToTimelineOnClick"
        android:text="@string/yes_add_to_timeline"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topImageView"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/skipToNextBTN"
        android:layout_width="229dp"
        android:layout_height="53dp"
        android:alpha="0"
        android:background="#E91E47"
        android:onClick="skipTonextOnClick"
        android:text="@string/nope_show_next_event"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToTimelineBTN"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="129dp"
        android:layout_height="54dp"
        android:alpha="0"
        android:background="#FF5722"
        android:onClick="submitOnClick"
        android:text="Review And Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skipToNextBTN"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>